ListView: fix potential out-of-bounds write to list of visible items

Fixes: QTBUG-122658
Pick-to: 6.5
Change-Id: I5bec0d9d880d362d2633d29ff644876736949bb5
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 4b53c940877f7cfcdee06bc902ec4b8a7293c3e1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 0627e9c196d92914207071e77b096f490e29d6a7)